Convert to CMAKE.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,4 +8,5 @@ set( CMAKE_CXX_STANDARD_REQUIRED ON  )
 set( CMAKE_CXX_EXTENSIONS        OFF )
 
 add_subdirectory( lib/docopt )
+add_subdirectory( lib/SHA-3/SHA-3 )
 add_subdirectory( src )
