--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required( VERSION 2.8.12 )
 
 project( dvs )
 
+option( USE_BOOST_REGEX "Replace std::regex with Boost.Regex" OFF )
+
 # Set standard C++ 17
 set( CMAKE_CXX_STANDARD          17  )
 set( CMAKE_CXX_STANDARD_REQUIRED ON  )
