--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,6 @@
 
 set( SOURCE_FILES
+     command_cat.cpp
      command_hash.cpp
      command_init.cpp
      dvs.cpp
@@ -7,6 +8,7 @@ set( SOURCE_FILES
    )
 
 set( HEADER_FILES
+     command_cat.h
      command_hash.h
      command_init.h
      dvs.h
