Add skeleton for 'read-tree' command.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,6 +3,7 @@ set( SOURCE_FILES
      command_cat.cpp
      command_hash.cpp
      command_init.cpp
+     command_read_tree.cpp
      command_status.cpp
      command_write_tree.cpp
      dvs.cpp
@@ -13,6 +14,7 @@ set( HEADER_FILES
      command_cat.h
      command_hash.h
      command_init.h
+     command_read_tree.h
      command_status.h
      command_write_tree.h
      dvs.h
