Add skeleton for automated tests.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,3 +12,4 @@ set( CMAKE_CXX_EXTENSIONS        OFF )
 add_subdirectory( lib/docopt )
 add_subdirectory( lib/SHA-3/SHA-3 )
 add_subdirectory( src )
+add_subdirectory( tests )
