Try building first test on Windows, but failing, so try on MacOs.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -18,3 +18,6 @@ add_executable( test_dvs_command
                 ${DVS_TEST_HEADER_FILES}
               )
 
+target_include_directories( test_dvs_command PRIVATE
+                            ../src
+                          )
