Implement 'checkout'.  Refactor HashType to RecordType.  GetHash now has an optional 'expectedRecordType' which we can use to ensure we are getting the type of object we expect if desired.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,7 @@
 
 set( SOURCE_FILES
      command_cat.cpp
+     command_checkout.cpp
      command_commit.cpp
      command_hash.cpp
      command_init.cpp
@@ -17,6 +18,7 @@ set( SOURCE_FILES
 
 set( HEADER_FILES
      command_cat.h
+     command_checkout.h
      command_commit.h
      command_hash.h
      command_init.h
