Add skeleton for branch create command.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,6 @@
 
 set( SOURCE_FILES
+     command_branch_create.cpp
      command_cat.cpp
      command_checkout.cpp
      command_commit.cpp
@@ -18,6 +19,7 @@ set( SOURCE_FILES
    )
 
 set( HEADER_FILES
+     command_branch_create.h
      command_cat.h
      command_checkout.h
      command_commit.h
