Refactor to use TreeRecord.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -17,6 +17,7 @@ set( SOURCE_FILES
      file_system_normal.cpp
      read_tree_generator.cpp
      record_commit.cpp
+     record_tree.cpp
    )
 
 set( HEADER_FILES
@@ -38,6 +39,7 @@ set( HEADER_FILES
      file_system_normal.h
      read_tree_generator.h
      record_commit.h
+     record_tree.h
    )
 
 
