Implement 'dvs branch list'.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,7 @@
 
 set( SOURCE_FILES
      command_branch_create.cpp
+     command_branch_list.cpp
      command_cat.cpp
      command_checkout.cpp
      command_commit.cpp
@@ -22,6 +23,7 @@ set( SOURCE_FILES
 
 set( HEADER_FILES
      command_branch_create.h
+     command_branch_list.h
      command_cat.h
      command_checkout.h
      command_commit.h
