Get rid of compiler warnings on Windows.

--- a/lib/dtl/examples/CMakeLists.txt
+++ b/lib/dtl/examples/CMakeLists.txt
@@ -4,6 +4,14 @@ add_executable( unidiff
                 unidiff.cpp
               )
 
+if ( MSVC )
+
+  target_compile_definitions( unidiff PRIVATE
+                              _CRT_SECURE_NO_WARNINGS
+                            )
+
+endif( )
+
 target_include_directories( unidiff PRIVATE
                             ..
                           )
