Add 'index add' subcommand.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -14,6 +14,7 @@ set( SOURCE_FILES
      command_commit.cpp
      command_diff.cpp
      command_hash.cpp
+     command_index_add.cpp
      command_init.cpp
      command_log.cpp
      command_read_tree.cpp
@@ -40,6 +41,7 @@ set( HEADER_FILES
      command_commit.h
      command_diff.h
      command_hash.h
+     command_index_add.h
      command_init.h
      command_log.h
      command_read_tree.h
