--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,6 +15,7 @@ set( SOURCE_FILES
      command_diff.cpp
      command_hash.cpp
      command_index_add.cpp
+     command_index_remove.cpp
      command_init.cpp
      command_log.cpp
      command_read_tree.cpp
@@ -42,6 +43,7 @@ set( HEADER_FILES
      command_diff.h
      command_hash.h
      command_index_add.h
+     command_index_remove.h
      command_init.h
      command_log.h
      command_read_tree.h
