Refactored to be able to write tree from index during commit instead of from working copy directory tree.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -25,6 +25,7 @@ set( SOURCE_FILES
      command_tag_list.cpp
      command_write_tree.cpp
      command_unimplemented.cpp
+     common.cpp
      diff.cpp
      dvs.cpp
      index.cpp
